@@ -28,6 +28,7 @@ import org.apache.hadoop.mapred.RecordReader;
 import org.apache.avro.file.FileReader;
 import org.apache.avro.file.DataFileReader;
 import org.apache.avro.specific.SpecificDatumReader;
+import org.apache.avro.reflect.ReflectDatumReader;
 
 /** An {@link RecordReader} for Avro data files. */
 public class AvroRecordReader<T>
@@ -41,7 +42,9 @@ public class AvroRecordReader<T>
     throws IOException {
     this(DataFileReader.openReader
          (new FsInput(split.getPath(), job),
-          new SpecificDatumReader<T>(AvroJob.getInputSchema(job))),
+          job.getBoolean(AvroJob.INPUT_IS_REFLECT, false)
+          ? new ReflectDatumReader<T>(AvroJob.getInputSchema(job))
+          : new SpecificDatumReader<T>(AvroJob.getInputSchema(job))),
          split);
   }
 
