@@ -31,6 +31,7 @@ import org.apache.avro.generic.GenericData;
 import org.apache.avro.generic.GenericContainer;
 import org.apache.avro.generic.IndexedRecord;
 import org.apache.avro.specific.SpecificDatumReader.SchemaConstructable;
+import org.apache.avro.reflect.ReflectData;
 
 /** A key/value pair. */
 public class Pair<K,V>
@@ -163,6 +164,46 @@ public class Pair<K,V>
   private static final Schema NULL_SCHEMA = Schema.create(Type.NULL);
 
   @SuppressWarnings("unchecked")
+  public Pair(Object key, Object value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, ReflectData.get().getSchema(value.getClass()));
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, GenericContainer value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, value.getSchema());
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, CharSequence value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, STRING_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, ByteBuffer value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, BYTES_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, Integer value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, INT_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, Long value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, LONG_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, Float value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, FLOAT_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, Double value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, DOUBLE_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Object key, Void value) {
+    this((K)key, ReflectData.get().getSchema(key.getClass()), (V)value, NULL_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(GenericContainer key, Object value) {
+    this((K)key, key.getSchema(), (V)value, ReflectData.get().getSchema(value.getClass()));
+  }
+  @SuppressWarnings("unchecked")
   public Pair(GenericContainer key, GenericContainer value) {
     this((K)key, key.getSchema(), (V)value, value.getSchema());
   }
@@ -193,6 +234,10 @@ public class Pair<K,V>
   @SuppressWarnings("unchecked")
   public Pair(GenericContainer key, Void value) {
     this((K)key, key.getSchema(), (V)value, NULL_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(CharSequence key, Object value) {
+    this((K)key, STRING_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
   }
   @SuppressWarnings("unchecked")
   public Pair(CharSequence key, GenericContainer value) {
@@ -227,6 +272,10 @@ public class Pair<K,V>
     this((K)key, STRING_SCHEMA, (V)value, NULL_SCHEMA);
   }
   @SuppressWarnings("unchecked")
+  public Pair(ByteBuffer key, Object value) {
+    this((K)key, BYTES_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
+  }
+  @SuppressWarnings("unchecked")
   public Pair(ByteBuffer key, GenericContainer value) {
     this((K)key, BYTES_SCHEMA, (V)value, value.getSchema());
   }
@@ -257,6 +306,10 @@ public class Pair<K,V>
   @SuppressWarnings("unchecked")
   public Pair(ByteBuffer key, Void value) {
     this((K)key, BYTES_SCHEMA, (V)value, NULL_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Integer key, Object value) {
+    this((K)key, INT_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
   }
   @SuppressWarnings("unchecked")
   public Pair(Integer key, GenericContainer value) {
@@ -291,6 +344,10 @@ public class Pair<K,V>
     this((K)key, INT_SCHEMA, (V)value, NULL_SCHEMA);
   }
   @SuppressWarnings("unchecked")
+  public Pair(Long key, Object value) {
+    this((K)key, LONG_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
+  }
+  @SuppressWarnings("unchecked")
   public Pair(Long key, GenericContainer value) {
     this((K)key, LONG_SCHEMA, (V)value, value.getSchema());
   }
@@ -321,6 +378,10 @@ public class Pair<K,V>
   @SuppressWarnings("unchecked")
   public Pair(Long key, Void value) {
     this((K)key, LONG_SCHEMA, (V)value, NULL_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Float key, Object value) {
+    this((K)key, FLOAT_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
   }
   @SuppressWarnings("unchecked")
   public Pair(Float key, GenericContainer value) {
@@ -355,6 +416,10 @@ public class Pair<K,V>
     this((K)key, FLOAT_SCHEMA, (V)value, NULL_SCHEMA);
   }
   @SuppressWarnings("unchecked")
+  public Pair(Double key, Object value) {
+    this((K)key, DOUBLE_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
+  }
+  @SuppressWarnings("unchecked")
   public Pair(Double key, GenericContainer value) {
     this((K)key, DOUBLE_SCHEMA, (V)value, value.getSchema());
   }
@@ -385,6 +450,10 @@ public class Pair<K,V>
   @SuppressWarnings("unchecked")
   public Pair(Double key, Void value) {
     this((K)key, DOUBLE_SCHEMA, (V)value, NULL_SCHEMA);
+  }
+  @SuppressWarnings("unchecked")
+  public Pair(Void key, Object value) {
+    this((K)key, NULL_SCHEMA, (V)value, ReflectData.get().getSchema(value.getClass()));
   }
   @SuppressWarnings("unchecked")
   public Pair(Void key, GenericContainer value) {
@@ -420,6 +489,7 @@ public class Pair<K,V>
   }
 
   // private static final String[][] TABLE = new String[][] {
+  //   {"Object", "ReflectData.get().getSchema({0}.getClass())"},
   //   {"GenericContainer", "{0}.getSchema()"},
   //   {"CharSequence", "STRING_SCHEMA"},
   //   {"ByteBuffer", "BYTES_SCHEMA"},
